# datasheet-extractor

./: .gitignore  EVALUATION.md  README.md  pyproject.toml
analysis/dac5578/: ic_reference.md  manual_processing_report.json  manual_processing_report.md
cli/: __init__.py  ds_extract.py  smoke_test.py
docs/: architecture.md  out-files.md
notebooks/: pipeline_walkthrough.ipynb
out_demo/: manual_processing_report.json
out_demo/adafruit-dac7578-8-x-channel-12-bit-i2c-dac/: index.json  manual_processing_report.json  manual_processing_report.md
out_demo/adafruit-dac7578-8-x-channel-12-bit-i2c-dac/tables/: table_0001.csv  table_0001.md  table_0002.json
out_demo/dac5578/: document.json  index.json  processing_rollup.md
out_demo/dac5578/processing/: fig_0003.json  fig_0005.json  fig_0006.json  fig_0007.json  (+138 more)
out_example/: manual_processing_report.json  manual_processing_report.md  processing_rollup.json
out_example/adafruit-dac7578-8-x-channel-12-bit-i2c-dac/: document.json  index.json  manual_processing_report.json  manual_processing_report.md  processing_rollup.json  processing_rollup.md
out_example/dac5578/: document.json  index.json  manual_processing_report.json  manual_processing_report.md  processing_rollup.json  processing_rollup.md
prompts/: build_arduino_library.md  figure_analysis.md
src/: __init__.py  export_figures.py  export_tables.py  extract_docling.py  local_processor.py  pipeline.py  report.py  schema.py  tagger.py  utils.py
tests/: test_chunking.py  test_ids.py  test_pipeline_consistency.py  test_smoke_examples.py  test_tagger.py
(+1150 files in other folders)
