[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "datasheet-extractor"
version = "0.1.0"
description = "Local datasheet PDF extraction pipeline using Docling"
readme = "README.md"
authors = []
packages = [{include = "cli"}, {include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
docling = "*"
ollama = "*"
pandas = "*"
pydantic = "^2.0"
pillow = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ipykernel = "^7.2.0"

[tool.poetry.scripts]
datasheet-extract = "cli.ds_extract:main"
datasheet-smoke-test = "cli.smoke_test:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
